--- a/SkinEngine/build.gradle
+++ b/SkinEngine/build.gradle
@@ -36,4 +36,11 @@ android {
 dependencies {
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation "androidx.core:core:1.3.2"
+
+    //kotlin基础库+协程库
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72"
+    api "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8"
+
 }
