--- a/Basic/build.gradle
+++ b/Basic/build.gradle
@@ -63,10 +63,6 @@ dependencies {
     api 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'androidx.palette:palette:1.0.0'
 
-    //MMKV
-    api 'com.tencent:mmkv-static:1.2.7'
-    implementation 'com.getkeepsafe.relinker:relinker:1.4.1'
-
     //Glide
     api "com.github.bumptech.glide:glide:4.8.0"
     annotationProcessor "com.github.bumptech.glide:compiler:4.8.0"
@@ -77,6 +73,8 @@ dependencies {
     implementation 'com.tencent.bugly:nativecrashreport:3.7.7' //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
 
     api project(":BaseUtil")
+    //KV存储
+    api project(":KVStorage")
 
     if (isSourceBuildZebra.toBoolean()) {
         implementation project(":zebra:zebra_core")
