--- a/KVStorage/build.gradle
+++ b/KVStorage/build.gradle
@@ -37,13 +37,7 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation "androidx.core:core:1.3.2"
 
-    //kotlin基础库+协程库
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72"
-    api "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8"
-
-    //KV存储
-    implementation project(":KVStorage")
-
+    //MMKV
+    api 'com.tencent:mmkv-static:1.2.7'
+    implementation 'com.getkeepsafe.relinker:relinker:1.4.1'
 }
