--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,9 @@ include ':BaseUtil'
 include ':SkinEngine'
 include ':KVStorage'
 
+
+//皮肤包模块
+include ':SkinPackage:skin_purple'
+
 //应用模块
 include ':app'
