--- a/Basic/build.gradle
+++ b/Basic/build.gradle
@@ -77,6 +77,8 @@ dependencies {
     api project(":KVStorage")
     //换肤模块
     api project(":SkinEngine")
+    //皮肤资源模块
+    api project(":SkinRes")
 
     if (isSourceBuildZebra.toBoolean()) {
         implementation project(":zebra:zebra_core")
