--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,10 +98,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
-    //glide 库
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
-    //下拉刷新库，后续会更换成 QQ Reader 的刷新库
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
 
     implementation 'com.google.code.gson:gson:2.4'
     implementation project(':List')
@@ -112,6 +109,9 @@ dependencies {
     }
 
     kapt 'com.alibaba:arouter-compiler:1.5.1'
+
+    def room_version = "2.2.6"
+    kapt "androidx.room:room-compiler:$room_version"
 }
 
 kapt {
