--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ apply from: 'config.gradle'
 buildscript {
     ext.kotlin_version = "1.3.61"
     repositories {
+        jcenter{ url 'https://maven.aliyun.com/repository/jcenter'}
         maven { url 'https://jitpack.io' }
         google()
         jcenter()
@@ -20,6 +21,7 @@ buildscript {
 
 allprojects {
     repositories {
+        jcenter{ url 'https://maven.aliyun.com/repository/jcenter'}
         maven { url 'https://jitpack.io' }
         google()
         jcenter()
