--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,7 +101,7 @@ dependencies {
 
 
     implementation 'com.google.code.gson:gson:2.4'
-    implementation project(':List')
+    implementation project(':PageList')
     implementation project(':Basic')
     implementation project(":YWRouter_Android")
     if (!isSourceBuildZebra.toBoolean()) {
