--- a/PageList/src/main/AndroidManifest.xml
+++ b/PageList/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application>
         <activity
-            android:name="com.qq.reader.bookstore.CommonBookStoreActivity"
+            android:name="com.qq.reader.bookstore.CommonPageListActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|smallestScreenSize|screenLayout"
             android:screenOrientation="portrait"
             android:theme="@style/TitleTheme"
