--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ include ':Download'
 //皮肤包模块
 include ':SkinPackage:skin_purple'
 include ':SkinPackage:skin_sienna'
+include ':SkinPackage:skin_beauty'
 include ':SkinRes'
 
 //应用模块
