--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,8 @@ include ':BaseUtil'
 include ':SkinEngine'
 include ':KVStorage'
 include ':Download'
+include ':PluginEngine'
+include ':PluginLibs:TestPlugin'
 
 
 //皮肤包模块
