--- a/PluginEngine/build.gradle
+++ b/PluginEngine/build.gradle
@@ -1,8 +1,4 @@
-plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
-    id 'kotlin-android-extensions'
-}
+apply plugin: 'com.android.library'
 
 android {
     compileOptions.encoding = "UTF-8"
@@ -17,7 +13,6 @@ android {
         versionCode 1
         versionName "1.0"
 
-//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -27,8 +22,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             buildConfigField("Boolean", "isPluginSourceBuild", "$isPluginSourceBuild")
         }
     }
@@ -39,16 +32,5 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.annotation:annotation:1.1.0'
-    implementation "androidx.core:core:1.3.2"
-
-    //kotlin基础库+协程库
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72"
-    api "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8"
-
-    //KV存储
-    implementation project(":KVStorage")
-
+    implementation 'com.google.android.material:material:1.2.1'
 }
