添加插件混淆配置混淆配置

--- a/PluginEngine/build.gradle
+++ b/PluginEngine/build.gradle
@@ -20,8 +20,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("Boolean", "isPluginSourceBuild", "$isPluginSourceBuild")
         }
         debug {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             buildConfigField("Boolean", "isPluginSourceBuild", "$isPluginSourceBuild")
         }
     }
