--- a/PluginLibs/TestPlugin/src/main/AndroidManifest.xml
+++ b/PluginLibs/TestPlugin/src/main/AndroidManifest.xml
@@ -5,6 +5,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application>
-        <activity android:name="com.lulu.plugin.libs.TestPluginActivity"/>
+        <activity android:name="com.lulu.plugin.libs.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name="com.lulu.plugin.libs.TestPluginActivity" />
     </application>
+
 </manifest>
