将插件引擎和插件业务解耦

--- a/PluginLibs/TestPlugin/build.gradle
+++ b/PluginLibs/TestPlugin/build.gradle
@@ -60,8 +60,7 @@ android {
 }
 
 dependencies {
-    compileOnly project(":Basic")
-    compileOnly project(":PluginEngine")
+    compileOnly project(":PluginBusiness")
 
 
 }
