--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include ':SkinEngine'
 include ':KVStorage'
 include ':Download'
 include ':PluginEngine'
+include ':PluginBusiness'
 include ':PluginLibs:TestPlugin'
 
 
