将插件引擎和插件业务解耦

--- a/PluginLibs/TestPlugin/build.gradle
+++ b/PluginLibs/TestPlugin/build.gradle
@@ -4,6 +4,7 @@ if (isPluginSourceBuild.toBoolean()) {
     apply plugin: 'com.android.library'
 } else {
     apply plugin: 'com.android.application'
+    apply plugin: 'kotlin-android'
 }
 
 android {
@@ -61,6 +62,4 @@ android {
 
 dependencies {
     compileOnly project(":PluginBusiness")
-
-
 }
