有问题,暂时提交上去

--- a/PluginBusiness/src/main/AndroidManifest.xml
+++ b/PluginBusiness/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <application>
+    <application android:theme="@style/AppTheme">
         <activity
             android:name=".activity.ProxyActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|smallestScreenSize|screenLayout"
