--- a/PluginLibs/TestPlugin/build.gradle
+++ b/PluginLibs/TestPlugin/build.gradle
@@ -5,6 +5,7 @@ if (isPluginSourceBuild.toBoolean()) {
 } else {
     apply plugin: 'com.android.application'
     apply plugin: 'kotlin-android'
+    apply plugin: 'kotlin-kapt'
 }
 
 android {
