--- a/PluginLibs/TestPlugin/build.gradle
+++ b/PluginLibs/TestPlugin/build.gradle
@@ -61,9 +61,5 @@ android {
 }
 
 dependencies {
-    compileOnly (project(":PluginBusiness")) {
-        exclude group: "androidx.arch.core"
-    }
-    implementation "androidx.appcompat:appcompat:1.2.0"
-    implementation project(":SkinRes")
+    implementation project(':PluginBusiness')
 }
