--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,17 @@
             android:windowSoftInputMode="adjustPan|stateHidden"
             android:theme="@style/AppTheme"
             tools:replace="theme,windowSoftInputMode" />
+
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.lulu.hotsearch.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
