--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,8 @@ android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.jvmargs= -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
 
+#包名
+package_name=com.lulu.hotsearch
 #manifest 中的 version name
 app_version_name=2.3.0.888
 #manifest 中的 version code
