--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,7 +110,7 @@ dependencies {
     implementation project(':PageList')
     implementation project(':Basic')
     implementation project(":YWRouter_Android")
-    implementation project(":PluginBusiness")
+    //implementation project(":PluginBusiness")
     if (!isSourceBuildZebra.toBoolean()) {
         implementation project(':zebra_core')
     }
