--- a/PluginEngine/src/main/AndroidManifest.xml
+++ b/PluginEngine/src/main/AndroidManifest.xml
@@ -5,11 +5,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application>
-<!--        <activity-->
-<!--            android:name=".ProxyActivity"-->
-<!--            android:configChanges="orientation|keyboardHidden|screenSize|smallestScreenSize|screenLayout"-->
-<!--            android:screenOrientation="portrait"-->
-<!--            android:theme="@style/AppTheme"-->
-<!--            android:windowSoftInputMode="adjustPan|stateHidden" />-->
+        <activity
+            android:name=".StubActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|smallestScreenSize|screenLayout"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
     </application>
 </manifest>
