--- a/app/src/main/assets/local_config_info.json
+++ b/app/src/main/assets/local_config_info.json
@@ -1,8 +1,11 @@
-[
-  {
-    "name": "微博",
-    "title": "微博热搜榜",
-    "icon": "https://gitee.com/luluzhang/HotSearchConfigProject/raw/master/icon/sina_wb.png",
-    "type": "weibo"
-  }
-]
+{
+  "hotSearchList": [
+    {
+      "name": "微博",
+      "title": "微博热搜榜",
+      "icon": "https://gitee.com/luluzhang/HotSearchConfigProject/raw/master/icon/sina_wb.png",
+      "type": "weibo"
+    }
+  ],
+  "isUseDefaultBrowser": true
+}
