完成宿主与插件的通信！！！

--- a/PluginPkg/TestPlugin/build.gradle
+++ b/PluginPkg/TestPlugin/build.gradle
@@ -64,4 +64,5 @@ android {
 dependencies {
     implementation project(':PluginEngine')
     implementation project(':Basic')
+    implementation project(':PluginLib')
 }
