--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,9 @@ apply from: 'config.gradle'
 buildscript {
     ext.kotlin_version = "1.3.61"
     repositories {
-        jcenter{ url 'https://maven.aliyun.com/repository/jcenter'}
+        jcenter{ url 'https://maven.aliyun.com/repository/public'}
         maven { url 'https://jitpack.io' }
         google()
-        jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:3.5.0"
@@ -21,10 +20,9 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter{ url 'https://maven.aliyun.com/repository/jcenter'}
+        jcenter{ url 'https://maven.aliyun.com/repository/public'}
         maven { url 'https://jitpack.io' }
         google()
-        jcenter()
     }
 }
 
